<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.quarkiverse</groupId>
        <artifactId>quarkiverse-parent</artifactId>
        <version>22</version>
    </parent>

    <groupId>io.quarkiverse.artemis</groupId>
    <artifactId>quarkus-artemis-parent</artifactId>
    <version>999-SNAPSHOT</version>
    <name>Quarkus - Artemis - Parent</name>

    <packaging>pom</packaging>
    <modules>
        <module>bom</module>
        <module>build-parent</module>
        <module>core</module>
        <module>jms</module>
        <module>ra</module>
        <module>test-framework</module>
    </modules>

    <scm>
        <connection>scm:git:git@github.com:quarkiverse/quarkus-artemis.git</connection>
        <developerConnection>scm:git:git@github.com:quarkiverse/quarkus-artemis.git</developerConnection>
        <url>https://github.com/quarkiverse/quarkus-artemis</url>
      <tag>HEAD</tag>
  </scm>

    <properties>
        <!-- Plugin versions -->
        <compiler-plugin.version>3.13.0</compiler-plugin.version>
        <jandex-maven-plugin.version>3.6.0</jandex-maven-plugin.version>
        <maven-dependency-plugin.version>3.11.0</maven-dependency-plugin.version>
        <maven-jar-plugin.version>3.5.1</maven-jar-plugin.version>

        <!-- Dependency versions -->
        <artemis.version>2.55.0</artemis.version>
        <camel-quarkus.platform.version>3.38.1</camel-quarkus.platform.version>
        <quarkus.version>3.38.2</quarkus.version>
        <quarkus-ironjacamar.version>1.8.3</quarkus-ironjacamar.version>

        <!-- Project setup -->
        <maven.compiler.parameters>true</maven.compiler.parameters>
        <maven.compiler.proc>full</maven.compiler.proc>
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven-jar-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>io.quarkus</groupId>
                    <artifactId>quarkus-maven-plugin</artifactId>
                    <version>${quarkus.version}</version>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${compiler-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>io.quarkus</groupId>
                    <artifactId>quarkus-extension-maven-plugin</artifactId>
                    <version>${quarkus.version}</version>
                    <executions>
                        <execution>
                            <phase>compile</phase>
                            <goals>
                                <goal>extension-descriptor</goal>
                            </goals>
                            <configuration>
                                <deployment>${project.groupId}:${project.artifactId}-deployment:${project.version}</deployment>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>io.quarkus</groupId>
                    <artifactId>quarkus-config-doc-maven-plugin</artifactId>
                    <version>${quarkus.version}</version>
                </plugin>
                <plugin>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>${maven-dependency-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <profiles>
        <profile>
            <id>docs</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>!true</value>
                </property>
            </activation>
            <modules>
                <module>docs</module>
            </modules>
        </profile>
        <profile>
            <id>it</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>!true</value>
                </property>
            </activation>
            <modules>
                <module>integration-tests</module>
            </modules>
        </profile>
    </profiles>
</project>
